--- a/style.css
+++ b/style.css
@@ -1,52 +1,54 @@
 body {
-
+	
 }
 
 #banner {
-    width: 100%;
-}
-.principal {
-    background: #d0d9c8;
-    padding: 30px;
+	width:100%;
 }
 
-h1 {
-    text-align: center;
-    color: white;
+.principal{
+	background: #5b7e69;
+	padding: 30px;
+}
+
+.titulo-principal {
+	padding-left: 20px;
+}
+
+.titulo-centralizado {
+	text-align: center;
+    color: #FFFFFF;
     background: #b9ba85;
 }
 
-p {text-align: center;
-    background: #e5e5e5;
+p {
+	text-align: center;
 }
 
-#missão {
-    font-size: 20px;
+#missao {
+	font-size: 20px;
 }
 
 em strong {
-    color: #1a280f;
+	color: #000000;
 }
 
 .itens {
-    font-style: italic;
+	font-style: italic
 }
 
 .beneficios {
-    background: #aac0b3;
-    padding: 20px;
+	background: #aac0b3;
+	padding: 20px;
 }
 
-h2 {
-    text-align: center;
+ul {
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
 }
- ul {
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
- }
 
 .imagembeneficios {
-    width: 50%;
+	width: 50%;
 }
