--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .titulo-centralizado {
 	text-align: center;
     color: #FFFFFF;
-    background: #b9ba85;
+    background: #aeaf8b;
 }
 
 p {
